--- a/Mod_1/Pandas/Pandas_groupby_practice/occupation_practice.ipynb
+++ b/Mod_1/Pandas/Pandas_groupby_practice/occupation_practice.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -60,16 +60,21 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>user_id</th>\n",
        "      <th>age</th>\n",
        "      <th>gender</th>\n",
        "      <th>occupation</th>\n",
        "      <th>zip_code</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>user_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>24</td>\n",
        "      <td>M</td>\n",
@@ -77,7 +82,6 @@
        "      <td>85711</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>53</td>\n",
        "      <td>F</td>\n",
@@ -85,7 +89,6 @@
        "      <td>94043</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
        "      <td>3</td>\n",
        "      <td>23</td>\n",
        "      <td>M</td>\n",
@@ -93,7 +96,6 @@
        "      <td>32067</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
        "      <td>4</td>\n",
        "      <td>24</td>\n",
        "      <td>M</td>\n",
@@ -101,7 +103,6 @@
        "      <td>43537</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
        "      <td>5</td>\n",
        "      <td>33</td>\n",
        "      <td>F</td>\n",
@@ -114,10 +115,8 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>938</td>\n",
        "      <td>939</td>\n",
        "      <td>26</td>\n",
        "      <td>F</td>\n",
@@ -125,7 +124,6 @@
        "      <td>33319</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>939</td>\n",
        "      <td>940</td>\n",
        "      <td>32</td>\n",
        "      <td>M</td>\n",
@@ -133,7 +131,6 @@
        "      <td>02215</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>940</td>\n",
        "      <td>941</td>\n",
        "      <td>20</td>\n",
        "      <td>M</td>\n",
@@ -141,7 +138,6 @@
        "      <td>97229</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>941</td>\n",
        "      <td>942</td>\n",
        "      <td>48</td>\n",
        "      <td>F</td>\n",
@@ -149,7 +145,6 @@
        "      <td>78209</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>942</td>\n",
        "      <td>943</td>\n",
        "      <td>22</td>\n",
        "      <td>M</td>\n",
@@ -158,33 +153,34 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>943 rows × 5 columns</p>\n",
+       "<p>943 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     user_id  age gender     occupation zip_code\n",
-       "0          1   24      M     technician    85711\n",
-       "1          2   53      F          other    94043\n",
-       "2          3   23      M         writer    32067\n",
-       "3          4   24      M     technician    43537\n",
-       "4          5   33      F          other    15213\n",
-       "..       ...  ...    ...            ...      ...\n",
-       "938      939   26      F        student    33319\n",
-       "939      940   32      M  administrator    02215\n",
-       "940      941   20      M        student    97229\n",
-       "941      942   48      F      librarian    78209\n",
-       "942      943   22      M        student    77841\n",
+       "         age gender     occupation zip_code\n",
+       "user_id                                    \n",
+       "1         24      M     technician    85711\n",
+       "2         53      F          other    94043\n",
+       "3         23      M         writer    32067\n",
+       "4         24      M     technician    43537\n",
+       "5         33      F          other    15213\n",
+       "...      ...    ...            ...      ...\n",
+       "939       26      F        student    33319\n",
+       "940       32      M  administrator    02215\n",
+       "941       20      M        student    97229\n",
+       "942       48      F      librarian    78209\n",
+       "943       22      M        student    77841\n",
        "\n",
-       "[943 rows x 5 columns]"
+       "[943 rows x 4 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.read_csv('https://raw.githubusercontent.com/justmarkham/DAT8/master/data/u.user',sep='|')\n",
+    "pd.read_csv('https://raw.githubusercontent.com/justmarkham/DAT8/master/data/u.user',sep='|',index_col='user_id')\n",
     "\n"
    ]
   },
@@ -197,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -221,16 +217,21 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>user_id</th>\n",
        "      <th>age</th>\n",
        "      <th>gender</th>\n",
        "      <th>occupation</th>\n",
        "      <th>zip_code</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>user_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>24</td>\n",
        "      <td>M</td>\n",
@@ -238,7 +239,6 @@
        "      <td>85711</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>53</td>\n",
        "      <td>F</td>\n",
@@ -246,7 +246,6 @@
        "      <td>94043</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
        "      <td>3</td>\n",
        "      <td>23</td>\n",
        "      <td>M</td>\n",
@@ -254,7 +253,6 @@
        "      <td>32067</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
        "      <td>4</td>\n",
        "      <td>24</td>\n",
        "      <td>M</td>\n",
@@ -262,91 +260,34 @@
        "      <td>43537</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
        "      <td>5</td>\n",
        "      <td>33</td>\n",
        "      <td>F</td>\n",
        "      <td>other</td>\n",
        "      <td>15213</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>938</td>\n",
-       "      <td>939</td>\n",
-       "      <td>26</td>\n",
-       "      <td>F</td>\n",
-       "      <td>student</td>\n",
-       "      <td>33319</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>939</td>\n",
-       "      <td>940</td>\n",
-       "      <td>32</td>\n",
-       "      <td>M</td>\n",
-       "      <td>administrator</td>\n",
-       "      <td>02215</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>940</td>\n",
-       "      <td>941</td>\n",
-       "      <td>20</td>\n",
-       "      <td>M</td>\n",
-       "      <td>student</td>\n",
-       "      <td>97229</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>941</td>\n",
-       "      <td>942</td>\n",
-       "      <td>48</td>\n",
-       "      <td>F</td>\n",
-       "      <td>librarian</td>\n",
-       "      <td>78209</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>942</td>\n",
-       "      <td>943</td>\n",
-       "      <td>22</td>\n",
-       "      <td>M</td>\n",
-       "      <td>student</td>\n",
-       "      <td>77841</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>943 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     user_id  age gender     occupation zip_code\n",
-       "0          1   24      M     technician    85711\n",
-       "1          2   53      F          other    94043\n",
-       "2          3   23      M         writer    32067\n",
-       "3          4   24      M     technician    43537\n",
-       "4          5   33      F          other    15213\n",
-       "..       ...  ...    ...            ...      ...\n",
-       "938      939   26      F        student    33319\n",
-       "939      940   32      M  administrator    02215\n",
-       "940      941   20      M        student    97229\n",
-       "941      942   48      F      librarian    78209\n",
-       "942      943   22      M        student    77841\n",
-       "\n",
-       "[943 rows x 5 columns]"
+       "         age gender  occupation zip_code\n",
+       "user_id                                 \n",
+       "1         24      M  technician    85711\n",
+       "2         53      F       other    94043\n",
+       "3         23      M      writer    32067\n",
+       "4         24      M  technician    43537\n",
+       "5         33      F       other    15213"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "users = pd.read_csv('https://raw.githubusercontent.com/justmarkham/DAT8/master/data/u.user',sep='|')\n",
-    "users"
+    "users = pd.read_csv('https://raw.githubusercontent.com/justmarkham/DAT8/master/data/u.user',sep='|',index_col='user_id')\n",
+    "users.head()"
    ]
   },
   {
@@ -545,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -569,64 +510,60 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>user_id</th>\n",
        "      <th>age</th>\n",
        "      <th>gender</th>\n",
        "      <th>occupation</th>\n",
        "      <th>zip_code</th>\n",
        "      <th>female</th>\n",
-       "      <th>Female</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>user_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>24</td>\n",
        "      <td>M</td>\n",
        "      <td>technician</td>\n",
        "      <td>85711</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>53</td>\n",
        "      <td>F</td>\n",
        "      <td>other</td>\n",
        "      <td>94043</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
        "      <td>3</td>\n",
        "      <td>23</td>\n",
        "      <td>M</td>\n",
        "      <td>writer</td>\n",
        "      <td>32067</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
        "      <td>4</td>\n",
        "      <td>24</td>\n",
        "      <td>M</td>\n",
        "      <td>technician</td>\n",
        "      <td>43537</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
        "      <td>5</td>\n",
        "      <td>33</td>\n",
        "      <td>F</td>\n",
        "      <td>other</td>\n",
        "      <td>15213</td>\n",
-       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -634,15 +571,16 @@
        "</div>"
       ],
       "text/plain": [
-       "   user_id  age gender  occupation zip_code  female  Female\n",
-       "0        1   24      M  technician    85711       0       0\n",
-       "1        2   53      F       other    94043       1       1\n",
-       "2        3   23      M      writer    32067       0       0\n",
-       "3        4   24      M  technician    43537       0       0\n",
-       "4        5   33      F       other    15213       1       1"
+       "         age gender  occupation zip_code  female\n",
+       "user_id                                         \n",
+       "1         24      M  technician    85711       0\n",
+       "2         53      F       other    94043       1\n",
+       "3         23      M      writer    32067       0\n",
+       "4         24      M  technician    43537       0\n",
+       "5         33      F       other    15213       1"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +589,7 @@
     "import numpy as np\n",
     "\n",
     "# users['female'] = np.where(users['gender']=='F', 1, 0)\n",
-    "users['Female'] =users.gender.apply(lambda x: 1 if x == 'F' else 0)\n",
+    "users['female'] = np.where(users['gender']=='F', 1, 0)\n",
     "users.head()\n",
     "\n",
     "#another method: users['female'] = np.where(users['gender']=='F', 1, 0)\n",
@@ -662,24 +600,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'Column not found: 1'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-20-7cfd624a5a4f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0musers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Female'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maggregate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/opt/anaconda3/lib/python3.7/site-packages/pandas/core/base.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    266\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    267\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mkey\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 268\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Column not found: {key}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    269\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_gotitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mndim\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    270\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'Column not found: 1'"
-     ]
+     "data": {
+      "text/plain": [
+       "0.28950159066808057"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "users.groupby('Female')[1].aggregate()"
+    "users['female'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "users[['occupation','femails']].groupby.('occupation').mean().sort_values(by='female',ascending=False)"
    ]
   },
   {
