--- a/Mod_2/JSON_APIs/JSON_and_API_calls.ipynb
+++ b/Mod_2/JSON_APIs/JSON_and_API_calls.ipynb
@@ -56,13 +56,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'businesses': [{'id': 'hYWsMDz0ms7TOnFTcsxYcw',\n",
+       "   'alias': 'manolis-ice-cream-pastries-and-cakes-austin',\n",
+       "   'name': 'Manolis Ice Cream, Pastries, & Cakes',\n",
+       "   'image_url': 'https://s3-media2.fl.yelpcdn.com/bphoto/aAmOnvITNNjs04XnKFvSGw/o.jpg',\n",
+       "   'is_closed': False,\n",
+       "   'url': 'https://www.yelp.com/biz/manolis-ice-cream-pastries-and-cakes-austin?adjust_creative=F3qypMKtTmS20ke5XNx-Sg&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=F3qypMKtTmS20ke5XNx-Sg',\n",
+       "   'review_count': 156,\n",
+       "   'categories': [{'alias': 'desserts', 'title': 'Desserts'},\n",
+       "    {'alias': 'icecream', 'title': 'Ice Cream & Frozen Yogurt'},\n",
+       "    {'alias': 'bakeries', 'title': 'Bakeries'}],\n",
+       "   'rating': 5.0,\n",
+       "   'coordinates': {'latitude': 30.24441, 'longitude': -97.75808},\n",
+       "   'transactions': ['pickup'],\n",
+       "   'price': '$',\n",
+       "   'location': {'address1': '603 W Live Oak St',\n",
+       "    'address2': None,\n",
+       "    'address3': '',\n",
+       "    'city': 'Austin',\n",
+       "    'zip_code': '78704',\n",
+       "    'country': 'US',\n",
+       "    'state': 'TX',\n",
+       "    'display_address': ['603 W Live Oak St', 'Austin, TX 78704']},\n",
+       "   'phone': '+15123875045',\n",
+       "   'display_phone': '(512) 387-5045',\n",
+       "   'distance': 6759.193628660178},\n",
+       "  {'id': 'rfqq-rHTTipS5XSuOhxCXg',\n",
+       "   'alias': 'dolce-neve-austin',\n",
+       "   'name': 'Dolce Neve',\n",
+       "   'image_url': 'https://s3-media2.fl.yelpcdn.com/bphoto/1DgEa_pgroGWjQeZasXo-Q/o.jpg',\n",
+       "   'is_closed': False,\n",
+       "   'url': 'https://www.yelp.com/biz/dolce-neve-austin?adjust_creative=F3qypMKtTmS20ke5XNx-Sg&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=F3qypMKtTmS20ke5XNx-Sg',\n",
+       "   'review_count': 543,\n",
+       "   'categories': [{'alias': 'gelato', 'title': 'Gelato'},\n",
+       "    {'alias': 'icecream', 'title': 'Ice Cream & Frozen Yogurt'},\n",
+       "    {'alias': 'coffee', 'title': 'Coffee & Tea'}],\n",
+       "   'rating': 4.5,\n",
+       "   'coordinates': {'latitude': 30.247625, 'longitude': -97.755404},\n",
+       "   'transactions': [],\n",
+       "   'price': '$',\n",
+       "   'location': {'address1': '1713 S 1st St',\n",
+       "    'address2': '',\n",
+       "    'address3': '',\n",
+       "    'city': 'Austin',\n",
+       "    'zip_code': '78704',\n",
+       "    'country': 'US',\n",
+       "    'state': 'TX',\n",
+       "    'display_address': ['1713 S 1st St', 'Austin, TX 78704']},\n",
+       "   'phone': '+15128045568',\n",
+       "   'display_phone': '(512) 804-5568',\n",
+       "   'distance': 6401.051305407798},\n",
+       "  {'id': 'TeVBtbf3Z8TC_wgddPWH7A',\n",
+       "   'alias': 'scoop-and-score-cedar-park-4',\n",
+       "   'name': 'Scoop & Score',\n",
+       "   'image_url': 'https://s3-media1.fl.yelpcdn.com/bphoto/cbKYHyRn7FpveylAPX7VgA/o.jpg',\n",
+       "   'is_closed': False,\n",
+       "   'url': 'https://www.yelp.com/biz/scoop-and-score-cedar-park-4?adjust_creative=F3qypMKtTmS20ke5XNx-Sg&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=F3qypMKtTmS20ke5XNx-Sg',\n",
+       "   'review_count': 130,\n",
+       "   'categories': [{'alias': 'coffee', 'title': 'Coffee & Tea'},\n",
+       "    {'alias': 'icecream', 'title': 'Ice Cream & Frozen Yogurt'}],\n",
+       "   'rating': 5.0,\n",
+       "   'coordinates': {'latitude': 30.5183617420555,\n",
+       "    'longitude': -97.7906447595262},\n",
+       "   'transactions': ['pickup', 'delivery'],\n",
+       "   'price': '$',\n",
+       "   'location': {'address1': '111 N Vista Ridge Blvd',\n",
+       "    'address2': 'Ste 202',\n",
+       "    'address3': '',\n",
+       "    'city': 'Cedar Park',\n",
+       "    'zip_code': '78613',\n",
+       "    'country': 'US',\n",
+       "    'state': 'TX',\n",
+       "    'display_address': ['111 N Vista Ridge Blvd',\n",
+       "     'Ste 202',\n",
+       "     'Cedar Park, TX 78613']},\n",
+       "   'phone': '+15123875383',\n",
+       "   'display_phone': '(512) 387-5383',\n",
+       "   'distance': 23916.645362565087},\n",
+       "  {'id': 'YVdTl-VERcOig4MP1264Rw',\n",
+       "   'alias': 'sweet-ritual-austin',\n",
+       "   'name': 'Sweet Ritual',\n",
+       "   'image_url': 'https://s3-media3.fl.yelpcdn.com/bphoto/6T0WLO2XvcrGkXSJgjL10Q/o.jpg',\n",
+       "   'is_closed': False,\n",
+       "   'url': 'https://www.yelp.com/biz/sweet-ritual-austin?adjust_creative=F3qypMKtTmS20ke5XNx-Sg&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=F3qypMKtTmS20ke5XNx-Sg',\n",
+       "   'review_count': 509,\n",
+       "   'categories': [{'alias': 'vegan', 'title': 'Vegan'},\n",
+       "    {'alias': 'icecream', 'title': 'Ice Cream & Frozen Yogurt'}],\n",
+       "   'rating': 4.5,\n",
+       "   'coordinates': {'latitude': 30.30608, 'longitude': -97.71523},\n",
+       "   'transactions': [],\n",
+       "   'price': '$',\n",
+       "   'location': {'address1': '4631 Airport Blvd',\n",
+       "    'address2': 'Ste 114',\n",
+       "    'address3': '',\n",
+       "    'city': 'Austin',\n",
+       "    'zip_code': '78751',\n",
+       "    'country': 'US',\n",
+       "    'state': 'TX',\n",
+       "    'display_address': ['4631 Airport Blvd', 'Ste 114', 'Austin, TX 78751']},\n",
+       "   'phone': '+15126668346',\n",
+       "   'display_phone': '(512) 666-8346',\n",
+       "   'distance': 4096.235786081973},\n",
+       "  {'id': 'Qt92iz7b_3v_0BDGT0TLSA',\n",
+       "   'alias': 'churro-co-austin-6',\n",
+       "   'name': 'Churro Co',\n",
+       "   'image_url': 'https://s3-media1.fl.yelpcdn.com/bphoto/vaN49zFjUuHUXd4EUbB-bA/o.jpg',\n",
+       "   'is_closed': False,\n",
+       "   'url': 'https://www.yelp.com/biz/churro-co-austin-6?adjust_creative=F3qypMKtTmS20ke5XNx-Sg&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=F3qypMKtTmS20ke5XNx-Sg',\n",
+       "   'review_count': 278,\n",
+       "   'categories': [{'alias': 'desserts', 'title': 'Desserts'},\n",
+       "    {'alias': 'foodtrucks', 'title': 'Food Trucks'}],\n",
+       "   'rating': 4.5,\n",
+       "   'coordinates': {'latitude': 30.24602, 'longitude': -97.75695},\n",
+       "   'transactions': [],\n",
+       "   'price': '$',\n",
+       "   'location': {'address1': '1906 South 1st St',\n",
+       "    'address2': None,\n",
+       "    'address3': '',\n",
+       "    'city': 'Austin',\n",
+       "    'zip_code': '78704',\n",
+       "    'country': 'US',\n",
+       "    'state': 'TX',\n",
+       "    'display_address': ['1906 South 1st St', 'Austin, TX 78704']},\n",
+       "   'phone': '+15129055267',\n",
+       "   'display_phone': '(512) 905-5267',\n",
+       "   'distance': 6573.989627564328}],\n",
+       " 'total': 1400,\n",
+       " 'region': {'center': {'longitude': -97.75772094726562,\n",
+       "   'latitude': 30.305156315977833}}}"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import json\n",
-    "f = open('data.json')\n",
-    "data = json.load(f)"
+    "f = open('data.json')  #open\n",
+    "data = json.load(f)    #load\n",
+    "data"
    ]
   },
   {
@@ -775,9 +914,15 @@
    "metadata": {},
    "source": [
     "- How many api endpoints does the API offer?\n",
+    "7\n",
     "- If you are searching for businesses, what are the required arguments you need to pass to the API?\n",
+    "either location or longitude and latitide\n",
     "- What is limit on the number of results an API request will return to you?\n",
-    "- When trying to pull reviews from the API what inromation do you need to pass in your API request?"
+    "Using the offset and limit parameters, you can get up to 1000 businesses from this endpoint if there are more than 1000 results. If you request a page out of this 1000 business limit, this endpoint will return an error.\n",
+    "\n",
+    "a client is limited to 5,000 API calls per 24 hours, resetting every midnight UTC.\n",
+    "- When trying to pull reviews from the API what inromation do you need to pass in your API request?\n",
+    "Business ID\n"
    ]
   },
   {
@@ -1020,7 +1165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
