--- a/Mod_2/SQL/AWS_MYSQL_PYTHON.ipynb
+++ b/Mod_2/SQL/AWS_MYSQL_PYTHON.ipynb
@@ -45,17 +45,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting mysql-connector-python\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/b0/d6/19f81615060d9a0eae204bd621fb5aa6604abc3fa45123583df029bd0895/mysql_connector_python-8.0.18-cp37-cp37m-macosx_10_13_x86_64.whl (4.5MB)\n",
+      "\u001b[K     |████████████████████████████████| 4.5MB 1.9MB/s eta 0:00:01     |██                              | 296kB 2.0MB/s eta 0:00:03     |█████▉                          | 819kB 2.0MB/s eta 0:00:02\n",
+      "\u001b[?25hCollecting protobuf>=3.0.0 (from mysql-connector-python)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/63/c3/c1929b176a62f2960fe8f9346bd7c3ed42dc2af7d61c0e9b21e36c68e2ce/protobuf-3.11.1-cp37-cp37m-macosx_10_9_intel.whl (1.4MB)\n",
+      "\u001b[K     |████████████████████████████████| 1.4MB 14.4MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: setuptools in /opt/anaconda3/lib/python3.7/site-packages (from protobuf>=3.0.0->mysql-connector-python) (41.4.0)\n",
+      "Requirement already satisfied: six>=1.9 in /opt/anaconda3/lib/python3.7/site-packages (from protobuf>=3.0.0->mysql-connector-python) (1.12.0)\n",
+      "Installing collected packages: protobuf, mysql-connector-python\n",
+      "Successfully installed mysql-connector-python-8.0.18 protobuf-3.11.1\n"
+     ]
+    }
+   ],
    "source": [
     "# make sure we have the package installed\n",
-    "#!pip install mysql-connector-python"
+    "!pip install mysql-connector-python"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,23 +149,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'flatiron.cma2tqtieueq.us-east-1.rds.amazonaws.com'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "config.pw_example"
+    "config.host"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<mysql.connector.connection.MySQLConnection object at 0x112aebe80>\n"
+      "<mysql.connector.connection_cext.CMySQLConnection object at 0x113017950>\n"
      ]
     }
    ],
@@ -160,7 +188,7 @@
     "cnx = mysql.connector .connect(\n",
     "    host = config.host,\n",
     "    user = config.user,\n",
-    "    passwd = config.password\n",
+    "    passwd = config.passwd\n",
     ")\n",
     "\n",
     "print(cnx) # it will print a connection object if everything is fine\n"
@@ -168,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,9 +231,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Database employees does not exists.\n",
+      "Database employees created successfully.\n"
+     ]
+    }
+   ],
    "source": [
     "def create_database(cursor, database):\n",
     "    try:\n",
@@ -237,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +362,7 @@
        "\"CREATE TABLE employees (  emp_no int(11) NOT NULL AUTO_INCREMENT,  birth_date date NOT NULL,  first_name varchar(14) NOT NULL,  last_name varchar(16) NOT NULL,  gender enum('M','F') NOT NULL,  hire_date date NOT NULL,  PRIMARY KEY (emp_no)) ENGINE=InnoDB\""
       ]
      },
-     "execution_count": 17,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,14 +373,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "cnx = mysql.connector.connect(\n",
     "    host = config.host,\n",
     "    user = config.user,\n",
-    "    passwd = config.password,\n",
+    "    passwd = config.passwd,\n",
     "    database = DB_NAME\n",
     ")\n",
     "cursor = cnx.cursor()"
@@ -351,14 +388,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating table employees: already exists.\n",
+      "Creating table employees: OK\n",
       "Creating table departments: OK\n",
       "Creating table salaries: OK\n",
       "Creating table dept_emp: OK\n",
@@ -394,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +441,7 @@
     "cnx = mysql.connector.connect(\n",
     "    host = config.host,\n",
     "    user = config.user,\n",
-    "    passwd = config.password,\n",
+    "    passwd = config.passwd,\n",
     "    database = DB_NAME\n",
     ")\n",
     "cursor = cnx.cursor()\n",
@@ -424,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,14 +501,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "cnx = mysql.connector.connect(\n",
     "    host = config.host,\n",
     "    user = config.user,\n",
-    "    passwd = config.password,\n",
+    "    passwd = config.passwd,\n",
     "    database = DB_NAME\n",
     ")\n",
     "cursor = cnx.cursor()"
@@ -479,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,6 +530,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -501,14 +552,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "cnx = mysql.connector.connect(\n",
     "    host = config.host,\n",
     "    user = config.user,\n",
-    "    passwd = config.password,\n",
+    "    passwd = config.passwd,\n",
     "    database = DB_NAME\n",
     ")\n",
     "cursor = cnx.cursor()"
@@ -516,9 +567,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "descriptor 'date' requires a 'datetime.datetime' object but received a 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-41-1f19fb1c2edf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m          \"WHERE hire_date BETWEEN %s AND %s\")\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mhire_start\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1999\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mhire_end\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1999\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m12\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m31\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: descriptor 'date' requires a 'datetime.datetime' object but received a 'int'"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "query = (\"SELECT first_name, last_name, hire_date FROM employees \"\n",
@@ -536,6 +599,13 @@
     "cursor.close()\n",
     "cnx.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -554,7 +624,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
