--- a/Mod_3/week-1/day_1_2_numpy_lab/NumPy Probability Lab - 1.ipynb
+++ b/Mod_3/week-1/day_1_2_numpy_lab/NumPy Probability Lab - 1.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,21 +44,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2, 4, 6, 8]\n",
-      "[2 4 6 8]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[2, 4, 6, 8]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# printing arrays\n",
-    "l = [2,4,6,8]\n"
+    "l = [2,4,6,8]\n",
+    "l\n"
    ]
   },
   {
@@ -281,11 +284,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function numpy.zeros>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# np.zeros create an array of matrix of zeros\n"
+    "# np.zeros create an array of matrix of zeros\n",
+    "np.zeros"
    ]
   },
   {
@@ -628,7 +643,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
